Fixing blurry text on hover

--- a/src/components/GalleryLink.scss
+++ b/src/components/GalleryLink.scss
@@ -16,12 +16,12 @@
   &__text {
     position: absolute;
 
-    left: 50%;
     top: 50%;
+    top: calc(50% - 0.5em);
+
+    width: 100%;
 
     margin: 0;
-
-    transform: translate(-50%, -50%);
 
     color: white;
     font-size: 18pt;
