--- a/src/variables.scss
+++ b/src/variables.scss
@@ -37,6 +37,7 @@ html {
 body {
   margin: 0;
   padding: 0;
+  -webkit-font-smoothing: subpixel-antialiased;
 }
 
 a {
